--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@testing-library/user-event": "^13.5.0",
     "firebase": "^9.6.3",
     "react": "^17.0.2",
+    "react-chat-engine": "^1.11.22",
     "react-dom": "^17.0.2",
+    "react-firebase-hooks": "^4.0.2",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "react-tinder-card": "^1.4.5",
@@ -41,5 +43,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "mini-css-extract-plugin": "2.4.5"
   }
 }
